[gd_scene load_steps=15 format=2]

[ext_resource path="res://Bonus/Fonts/HKNOVA-MEDIUM.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://Bonus/Fonts/MONUMENTEXTENDED-ULTRABOLD.OTF" type="DynamicFontData" id=2]
[ext_resource path="res://Bonus/Fonts/MONUMENTEXTENDED-REGULAR.OTF" type="DynamicFontData" id=3]
[ext_resource path="res://Bonus/Scripts/UI/ControlsScreen.gd" type="Script" id=4]
[ext_resource path="res://Bonus/Scripts/IntroViewport.gd" type="Script" id=5]
[ext_resource path="res://Bonus/Assets/SFX/PulseKick.wav" type="AudioStream" id=6]
[ext_resource path="res://Bonus/Assets/Music/IntroSong.ogg" type="AudioStream" id=7]

[sub_resource type="DynamicFont" id=1]
size = 95
outline_color = Color( 0.945098, 0.980392, 0.933333, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 100
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=3]
resource_name = "FadeIn"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Container:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.4, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Container/InputBoxContainer:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 360, 340 ), Vector2( 760, 340 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Container/InstructionText:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 848.351, 906 ), Vector2( 448, 906 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Container/InputBoxContainer:rect_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 0.31864, 1.31951 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.05, 1.05 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "FadeOut"
tracks/0/type = "value"
tracks/0/path = NodePath("Container:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.666667 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Background:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1.56917 ),
"update": 0,
"values": [ Color( 0.113725, 0.207843, 0.341176, 1 ), Color( 0.113725, 0.207843, 0.341176, 1 ), Color( 0.517647, 0.662745, 0.54902, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../AudioPlayer:volume_db")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.3, 0.7 ),
"transitions": PoolRealArray( 1, 1.8025 ),
"update": 0,
"values": [ -5.0, -80.0 ]
}

[sub_resource type="Animation" id=5]
length = 3.5
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Background/Control/SplashScreenText:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.49, 0.5, 2.5, 2.51 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 1.0, 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Background:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3.2, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.901961, 0.223529, 0.27451, 1 ), Color( 0.901961, 0.223529, 0.27451, 1 ), Color( 0.113725, 0.207843, 0.341176, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Background/InstructionText:custom_colors/default_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.04, 0.48, 0.5, 2.29, 2.61 ),
"transitions": PoolRealArray( 3.24901, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.945098, 0.980392, 0.933333, 0 ), Color( 0.945098, 0.980392, 0.933333, 0 ), Color( 0.945098, 0.980392, 0.933333, 1 ), Color( 0.945098, 0.980392, 0.933333, 1 ), Color( 0.945098, 0.980392, 0.933333, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Background/Control:rect_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2.8 ),
"transitions": PoolRealArray( 2.21914, 0.466516 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Background/SeizureWarning:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.48, 0.5, 2.3, 2.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="DynamicFont" id=6]
size = 90
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 25
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[node name="IntroViewport" type="ViewportContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="."]
arvr = true
size = Vector2( 1920, 1080 )
handle_input_locally = false
render_target_update_mode = 3
script = ExtResource( 5 )

[node name="ControlsScreen" type="Control" parent="Viewport"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="Viewport/ControlsScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.113725, 0.207843, 0.341176, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="Control" parent="Viewport/ControlsScreen"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InstructionText" type="RichTextLabel" parent="Viewport/ControlsScreen/Container"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -512.0
margin_top = -174.0
margin_right = 511.999
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0.945098, 0.980392, 0.933333, 1 )
bbcode_enabled = true
bbcode_text = "[center]LEFT[/center]"
text = "LEFT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InputBoxContainer" type="ColorRect" parent="Viewport/ControlsScreen/Container"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -200.0
margin_right = 200.0
margin_bottom = 200.0
rect_pivot_offset = Vector2( 200, 200 )
color = Color( 0.0588235, 0.298039, 0.458824, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InputBoxText" type="RichTextLabel" parent="Viewport/ControlsScreen/Container/InputBoxContainer"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -129.0
margin_bottom = 129.0
rect_scale = Vector2( 0.626792, 0.657951 )
rect_pivot_offset = Vector2( 200, 204 )
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0.945098, 0.980392, 0.933333, 1 )
bbcode_enabled = true
bbcode_text = "[center]Left Key/A[/center]"
text = "Left Key/A"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Viewport/ControlsScreen"]
anims/FadeIn = SubResource( 3 )
anims/FadeOut = SubResource( 4 )

[node name="PulseAudioPlayer" type="AudioStreamPlayer" parent="Viewport/ControlsScreen"]
stream = ExtResource( 6 )
volume_db = -3.0
pitch_scale = 1.1
mix_target = 2

[node name="SplashScreen" type="Control" parent="Viewport"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Viewport/SplashScreen"]
anims/IntroAnimation = SubResource( 5 )

[node name="Background" type="ColorRect" parent="Viewport/SplashScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.901961, 0.223529, 0.27451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="Viewport/SplashScreen/Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 961.28
margin_bottom = 540.0
rect_scale = Vector2( 1.18907, 1.18907 )
rect_pivot_offset = Vector2( 936, 536 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SplashScreenText" type="RichTextLabel" parent="Viewport/SplashScreen/Background/Control"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -54.5
margin_bottom = 54.5
rect_scale = Vector2( 1.0045, 1.0045 )
custom_fonts/normal_font = SubResource( 6 )
custom_colors/default_color = Color( 0.945098, 0.980392, 0.933333, 1 )
bbcode_enabled = true
bbcode_text = "[center]happy birthday r****  lol [/center]"
visible_characters = 0
percent_visible = 0.0
text = "happy birthday r****  lol "
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InstructionText" type="RichTextLabel" parent="Viewport/SplashScreen/Background"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -122.0
rect_scale = Vector2( 1.00125, 1.00125 )
custom_fonts/normal_font = SubResource( 7 )
custom_colors/default_color = Color( 0.945098, 0.980392, 0.933333, 0 )
bbcode_enabled = true
bbcode_text = "[center]F11 (Fullscreen) // Esc (Quit)  [/center]"
text = "F11 (Fullscreen) // Esc (Quit)  "
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SeizureWarning" type="RichTextLabel" parent="Viewport/SplashScreen/Background"]
modulate = Color( 1, 1, 1, 0 )
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -79.9999
margin_bottom = 42.0
rect_scale = Vector2( 1.00125, 1.00125 )
custom_fonts/normal_font = SubResource( 7 )
custom_colors/default_color = Color( 0.945098, 0.980392, 0.933333, 0.96875 )
bbcode_enabled = true
bbcode_text = "[center]Seizure Warning[/center]"
text = "Seizure Warning"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioPlayer" type="AudioStreamPlayer" parent="Viewport"]
stream = ExtResource( 7 )
autoplay = true
[connection signal="animation_finished" from="Viewport/ControlsScreen/AnimationPlayer" to="Viewport" method="_on_AnimationPlayerControls_animation_finished"]
[connection signal="finished" from="Viewport/ControlsScreen/PulseAudioPlayer" to="Viewport/ControlsScreen" method="_on_PulseAudioPlayer_finished"]
[connection signal="animation_finished" from="Viewport/SplashScreen/AnimationPlayer" to="Viewport" method="_on_AnimationPlayerSplash_animation_finished"]
